# internal/application/api/request/user.go
@@ -1,6 +1,6 @@
 package request
 
 type UserRequest struct {
-	username string `json:"username"`
-	password string `json:"password"`
+	Username string `json:"username"`
+	Password string `json:"password"`
 }
